--- a/pages/feedback/feedback.scss
+++ b/pages/feedback/feedback.scss
@@ -1,3 +1,8 @@
 page-feedback {
-
+    .preview {
+        max-height: 150px;
+        background: #eee;
+        border: 2px solid #444;
+        margin: 0 5px
+    }
 }
