--- a/pages/news/news.scss
+++ b/pages/news/news.scss
@@ -2,4 +2,11 @@ page-news {
     ion-content {
         background-color: #f2f1f7 !important;
     }
+    .item-md h2 {
+        font-size: 1.4rem !important;
+        font-weight: bold !important;
+    }
+    .item-md p {
+        font-size: 1.2rem !important;
+    }
 }
