--- a/pages/news/post/post.scss
+++ b/pages/news/post/post.scss
@@ -8,4 +8,11 @@ page-post {
     ion-label {
         white-space: normal !important;
     }
+    span {
+        font-size: 14px !important;
+    }
+    .toolbar-title {
+        font-size: 1.6rem !important;
+        padding: 0 0px !important;
+    }
 }
