Pages fixed and linked to data services

--- a/pages/news/post/post.scss
+++ b/pages/news/post/post.scss
@@ -15,4 +15,7 @@ page-post {
         font-size: 1.6rem !important;
         padding: 0 0px !important;
     }
+    .postImages img {
+        padding: 5px 2px !important;
+    }
 }
