--- a/pages/news/news.scss
+++ b/pages/news/news.scss
@@ -9,4 +9,7 @@ page-news {
     .item-md p {
         font-size: 1.2rem !important;
     }
+    ion-avatar img {
+        border-radius: 5px !important;
+    }
 }
