--- a/theme/variables.scss
+++ b/theme/variables.scss
@@ -28,7 +28,11 @@ $colors: (
   secondary:  #3d011e,
   danger:     #3d011e,
   light:      #f4f4f4,
-  dark:       #000000
+  dark:       #000000,
+  whatsapp:   #4caa41,
+  twitter:    #2d9af2,
+  facebook:   #3a5498,
+  gray:       #aaa
 );
 
 
