--- a/pages/details/contact/contact.scss
+++ b/pages/details/contact/contact.scss
@@ -14,5 +14,9 @@ page-contact {
 	}
 	a {
 		text-decoration: none;
-	}
+    }
+    span {
+        font-size: 1.3rem !important;
+        font-weight: bold !important;
+    }
 }
