--- a/pages/learn/water/water.scss
+++ b/pages/learn/water/water.scss
@@ -38,4 +38,10 @@ page-water {
     .item-md p {
         font-size: 1.2rem !important;
     }
+    .swiper-slide img {
+        width: auto;
+        max-width: 100%;
+        height: 100% !important;
+        max-height: 100%;
+    }
 }
